@@ -34,6 +34,8 @@ glibc (2.3.6-2) UNRELEASED; urgency=low
   * Remove the patch to install the libc into /lib instead of /lib64 on
     amd64 and move files after the call to 'make install'. This fixes 
     the wrong dynamic linker path for libc objects.  (Closes: #325226)
+  * Use sed and test in /etc/init.d/glibc.sh to compare kernel versions.
+    Partly fixes bug #325263.
 
  -- Clint Adams <schizo@debian.org>  Sun, 12 Feb 2006 11:04:38 -0500
 
